--- a/roles/k8s_master_ovpn/tasks/main.yml
+++ b/roles/k8s_master_ovpn/tasks/main.yml
@@ -95,6 +95,9 @@
   shell: curl http://169.254.169.254/latest/meta-data/local-hostname
   register: hostname
 
+- name: Set hostname as FQDN
+  shell: hostnamectl set-hostname {{ hostname.stdout }}
+
 - name: Get the vps gateway ip 
   shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
   register: private_ip
