--- a/roles/k8s_slave_ovpn/tasks/main.yml
+++ b/roles/k8s_slave_ovpn/tasks/main.yml
@@ -130,3 +130,8 @@
 # because while doing the setup it will create lots of temporary data on RAM
 - name: Cleaning Caches on RAM
   shell: echo 3 > /proc/sys/vm/drop_caches
+
+# - name: Reboot machine using a custom reboot command
+#   ansible.builtin.reboot:
+#     reboot_command: launchctl reboot userspace
+#     boot_time_command: uptime | cut -d ' ' -f 5
