Working workaround for ubuntu_21.x and later versions

--- a/roles/k8s_master_ovpn/tasks/main.yml
+++ b/roles/k8s_master_ovpn/tasks/main.yml
@@ -6,6 +6,31 @@
     name: net-tools
     state: present
 
+- name: Get the vps gateway ip 
+  shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
+  register: private_ip
+
+- name: Arrange route for ssh to access via primary interface
+  shell: "route add -host 213.112.64.208 gw {{ private_ip.stdout }}"
+
+# Install ovpn
+- name: "Installing OpenVPN"
+  apt: name={{item}} state=present
+  with_items:
+    - openvpn
+
+# Configure client ovpn
+- name: "Configure client ovpn"
+  template:
+    src: client.ovpn
+    dest: "/root/"
+
+# connect slaves to open vpn network
+- name: connect master to open vpn network
+  shell: "openvpn --config client.ovpn &"
+  args:
+    chdir: $HOME
+
 # Adding kubernetes repo from base url using gpg keys
 - name: install APT Transport HTTPS
   apt:
@@ -43,6 +68,12 @@
 - name: ensure docker and dependencies are installed
   apt: name=docker-ce update_cache=yes
 
+- name: ensure docker-ce-cli installed
+  apt: name=docker-ce-cli
+
+- name: ensure containerd.io installed
+  apt: name=containerd.io
+
 # Starting kubelet on master node. we maybe have a question on why kubelet is run on master node?
 # The reason for running kubelet on master node is that, kubeadm uses containers (pods) to deploy etcd and the api server components. 
 # For this, static manifests are created as yaml-files which are picked up by the kubelet on the master node 
@@ -52,16 +83,6 @@
     name: kubelet
     state: started
     enabled: yes
-
-- name: Workaround for running kubeadm
-  shell:
-    cmd: |
-      rm /etc/containerd/config.toml
-      systemctl restart containerd
-
-# Pulling all the images required for k8s master on master node.
-- name: Pulling the images of k8s master
-  shell: kubeadm config images pull
 
 # Updating Docker cgroup on Master Node. Reason for using cgroupdriver as 'systemd' instead of default ones, 
 # https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/configure-cgroup-driver/
@@ -79,49 +100,48 @@
     name: docker
     state: restarted
 
-# Install ovpn
-- name: "Installing OpenVPN"
-  apt: name={{item}} state=present
-  with_items:
-    - openvpn
-
-# Configure client ovpn
-- name: "Configure client ovpn"
-  template:
-    src: client.ovpn
-    dest: "/root/"
-
 - name: swapp off
   shell: swapoff -a
 
-# - name: Get node name
-#   shell: curl http://169.254.169.254/latest/meta-data/local-hostname
-#   register: hostname
+# Updating IP tables on Slave Node. Usually in the linux distros like ubuntu,
+# (https://www.kevinhooke.com/2018/11/23/checking-iptables-filtering-for-bridge-networking-on-ubuntu-for-kubernetes-setup/)
+# the bridge module in the kernel for "ip6tables, iptables and arptables" has the default set to "1"
+# ("on", i.e. "*do* send the packets to iptables"), but for the distros like Fedora, RHEL, and CentOS they are set to '0' so we need to
+# update the '/etc/sysctl.d/k8s.conf' to set it to '1'
+- name: Updating IP tables on master Node
+  copy:
+    dest: /etc/sysctl.d/k8s.conf
+    content: |
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.bridge.bridge-nf-call-iptables = 1
 
-# - name: Set hostname as FQDN
-#   shell: hostnamectl set-hostname {{ hostname.stdout }}
+# Reloading sysctl on Slave Node to activate the bridge changes
+- name: Reloading sysctl on master Node
+  command: sysctl --system
 
-- name: Get the vps gateway ip 
-  shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
-  register: private_ip
+- name: Get node name
+  shell: curl http://169.254.169.254/latest/meta-data/local-hostname
+  register: hostname
 
-- name: Arrange route for ssh to access via primary interface
-  shell: "route add -host 213.112.64.208 gw {{ private_ip.stdout }}"
+- name: Set hostname as FQDN
+  shell: hostnamectl set-hostname {{ hostname.stdout }}
 
-# connect slaves to open vpn network
-- name: connect slaves to open vpn network
-  shell: "openvpn --config client.ovpn &"
-  args:
-    chdir: $HOME
+- name: Workaround for running kube-api server on ubuntu_21.x and later versions
+  shell:
+    cmd: |
+      containerd config default | tee /etc/containerd/config.toml
+      sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
+      service containerd restart
+      service kubelet restart
 
-- name: Get the tunnel iface ip
-  shell: ip -f inet addr show tun0 | awk '/inet / {print $2}'
-  register: vpn_iface_ip
+- name: Pause for 1 minute to run calico
+  ansible.builtin.pause:
+    minutes: 1
 
 # Initialize kubernetes cluster with a pod network so that the Pods can talk to each other, also ignoring errors like 'NumCPU', 'Mem'
 # and 'FileContent--proc-sys-net-bridge-bridge-nf-call-iptables' as they are limited to system resources.
 - name: initialize the cluster
-  shell: "kubeadm init --apiserver-advertise-address={{ vpn_iface_ip.stdout }} --pod-network-cidr=10.244.0.0/16"
+  shell: "kubeadm init --pod-network-cidr=192.168.0.0/16"
   args:
     chdir: $HOME
   register: token_log
@@ -140,8 +160,8 @@
   shell: chown $(id -u):$(id -g) $HOME/.kube/config
 
 # Only required this if the user is root
-- name: export admin config
-  shell: export KUBECONFIG=/etc/kubernetes/admin.conf
+# - name: export admin config
+#   shell: export KUBECONFIG=/etc/kubernetes/admin.conf
 
 - name: Pause for 1 minute to run calico
   ansible.builtin.pause:
@@ -149,8 +169,7 @@
 
 # Deploying a CNI plugin on master node, we use 'calico' for it, https://projectcalico.docs.tigera.io/about/about-calico
 - name: install Pod network
-  become: yes
-  shell: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.24.0/manifests/calico.yaml 
+  shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
   args:
     chdir: $HOME
   register: calico_debug
