--- a/roles/ec2/tasks/main.yml
+++ b/roles/ec2/tasks/main.yml
@@ -25,6 +25,10 @@
       from_port: 51820
       to_port: 51820
       cidr_ip: 0.0.0.0/0
+    - proto: udp
+      from_port: 1194
+      to_port: 1194
+      cidr_ip: 0.0.0.0/0
     rules_egress:
     - proto: all
       cidr_ip: 0.0.0.0/0
