--- a/roles/k8s_slave_ovpn/tasks/main.yml
+++ b/roles/k8s_slave_ovpn/tasks/main.yml
@@ -6,6 +6,13 @@
     name: net-tools
     state: present
 
+# - name: Get node name
+#   shell: curl http://169.254.169.254/latest/meta-data/local-hostname
+#   register: hostname
+
+# - name: Set hostname as FQDN
+#   shell: hostnamectl set-hostname {{ hostname.stdout }}
+
 - name: Get the vps gateway ip 
   shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
   register: private_ip
@@ -25,12 +32,6 @@
     src: client.ovpn
     dest: "/root/"
 
-# connect slaves to open vpn network
-- name: connect slaves to open vpn network
-  shell: "openvpn --config client.ovpn &"
-  args:
-    chdir: /root/
-
 # Adding kubernetes repo from base url using gpg keys
 - name: install APT Transport HTTPS
   apt:
@@ -49,7 +50,7 @@
     filename: 'kubernetes'
 
 # Installing 'docker', 'kubeadm' and 'iproute-tc' on slave node 
-- name: Installing Docker & kubeadm on Slave Node
+- name: Installing iproute2 & kubeadm on Slave Node
   package:
     name:
       - kubeadm
@@ -107,13 +108,6 @@
 - name: Reloading sysctl on Slave Node
   command: sysctl --system
 
-- name: Get node name
-  shell: curl http://169.254.169.254/latest/meta-data/local-hostname
-  register: hostname
-
-- name: Set hostname as FQDN
-  shell: hostnamectl set-hostname {{ hostname.stdout }}
-
 - name: Workaround for running kube-api server on ubuntu_21.x and later versions
   shell:
     cmd: |
@@ -121,6 +115,12 @@
       sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
       service containerd restart
       service kubelet restart
+
+# connect slaves to open vpn network
+- name: connect slaves to open vpn network
+  shell: "openvpn --config client.ovpn &"
+  args:
+    chdir: /root/
 
 # Now this is the crucial part, joining our slave nodes to our master node 
 # “hostvars[groups[‘ec2_master’][0]]” option is calling the namespace of the master node from ec2 role.
@@ -132,8 +132,3 @@
 # because while doing the setup it will create lots of temporary data on RAM
 - name: Cleaning Caches on RAM
   shell: echo 3 > /proc/sys/vm/drop_caches
-
-# - name: Reboot machine using a custom reboot command
-#   ansible.builtin.reboot:
-#     reboot_command: launchctl reboot userspace
-#     boot_time_command: uptime | cut -d ' ' -f 5
