--- a/roles/k8s_slave_softether/tasks/main.yml
+++ b/roles/k8s_slave_softether/tasks/main.yml
@@ -1,1 +1,42 @@
 ---
+
+- name: Install net-tools for network management
+  apt:
+    name: net-tools
+    state: present
+
+- name: Update apt-get repo and cache
+  apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+
+- name: Download softether from internet
+  shell: wget https://github.com/SoftEtherVPN/SoftEtherVPN_Stable/releases/download/v4.38-9760-rtm/softether-vpnclient-v4.38-9760-rtm-2021.08.17-linux-x64-64bit.tar.gz
+  args:
+    chdir: $HOME
+
+- name: Untar the softether vpnclient
+  shell: tar xzvf softether-vpnclient-v4.38-9760-rtm-2021.08.17-linux-x64-64bit.tar.gz
+  args:
+    chdir: $HOME
+
+- name: Download build-essentials packages
+  shell: apt-get install build-essential -y
+
+- name: build the softether vpn client
+  shell: make
+  args:
+    chdir: $HOME/vpnclient
+
+- name: Run vpnclient from anywhere
+  shell: mv vpnclient/ /usr/local/
+  args:
+    chdir: $HOME
+
+- name: Set limited permissions to vpnclient and related utilities
+  shell: chmod 600 * && chmod 700 vpnclient && chmod 700 vpncmd
+  args:
+    chdir: /usr/local/vpnclient/
+
+- name: Start the vpnclient
+  shell: ./vpnclient start
+  args:
+    chdir: /usr/local/vpnclient/
