--- a/roles/k8s_vpn_softether/tasks/main.yml
+++ b/roles/k8s_vpn_softether/tasks/main.yml
@@ -5,6 +5,13 @@
     name: net-tools
     state: present
 
+- name: Get the vps gateway ip
+  shell: "route -n | grep 'UG[ \t]' | awk '{print $2}'"
+  register: private_ip
+
+- name: Arrange route for ssh to access via primary interface
+  shell: "route add -host 213.112.64.208 gw {{ private_ip.stdout }}"
+
 - name: Update apt-get repo and cache
   apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
 
