--- a/roles/k8s_master_softether/tasks/main.yml
+++ b/roles/k8s_master_softether/tasks/main.yml
@@ -50,3 +50,99 @@
 
 - name: Enable IP forward
   shell: echo 1 > /proc/sys/net/ipv4/ip_forward
+
+# Adding kubernetes repo from base url using gpg keys
+- name: install APT Transport HTTPS
+  apt:
+    name: apt-transport-https
+    state: present
+ 
+- name: add Kubernetes apt-key
+  apt_key:
+    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    state: present
+ 
+- name: add Kubernetes' APT repository
+  apt_repository:
+    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+    state: present
+    filename: 'kubernetes'
+
+# Installing 'docker', 'kubeadm' and 'iproute-tc' on master node 
+- name: Installing Docker & kubeadm on Master Node
+  package:
+    name:
+      - kubeadm
+      - iproute2
+    state: present
+
+# Starting and enabling the docker on master node.
+- name: enabling Docker on Master Node
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+
+- name: ensure docker registry is available
+  apt_repository: repo='deb https://download.docker.com/linux/ubuntu bionic stable' state=present
+
+- name: ensure docker and dependencies are installed
+  apt: name=docker-ce update_cache=yes
+
+- name: ensure docker-ce-cli installed
+  apt: name=docker-ce-cli
+
+- name: ensure containerd.io installed
+  apt: name=containerd.io
+
+# Starting kubelet on master node. we maybe have a question on why kubelet is run on master node?
+# The reason for running kubelet on master node is that, kubeadm uses containers (pods) to deploy etcd and the api server components. 
+# For this, static manifests are created as yaml-files which are picked up by the kubelet on the master node 
+# to provide the infrastructure pods. An added benefit is that you have the master node metrics available from the kubernetes api.
+- name: Staring kubelet on Master Node
+  service:
+    name: kubelet
+    state: started
+    enabled: yes
+
+# Updating Docker cgroup on Master Node. Reason for using cgroupdriver as 'systemd' instead of default ones, 
+# https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/configure-cgroup-driver/
+- name: Updating Docker cgroup on Master Node
+  copy:
+    dest: /etc/docker/daemon.json
+    content: |
+      {
+      "exec-opts": ["native.cgroupdriver=systemd"]
+      }
+
+# Restart the docker on Master node to get all things activated
+- name: Restart docker on Master Node
+  service:
+    name: docker
+    state: restarted
+
+- name: swapp off
+  shell: swapoff -a
+
+# Updating IP tables on Slave Node. Usually in the linux distros like ubuntu,
+# (https://www.kevinhooke.com/2018/11/23/checking-iptables-filtering-for-bridge-networking-on-ubuntu-for-kubernetes-setup/)
+# the bridge module in the kernel for "ip6tables, iptables and arptables" has the default set to "1"
+# ("on", i.e. "*do* send the packets to iptables"), but for the distros like Fedora, RHEL, and CentOS they are set to '0' so we need to
+# update the '/etc/sysctl.d/k8s.conf' to set it to '1'
+- name: Updating IP tables on master Node
+  copy:
+    dest: /etc/sysctl.d/k8s.conf
+    content: |
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.bridge.bridge-nf-call-iptables = 1
+
+# Reloading sysctl on Slave Node to activate the bridge changes
+- name: Reloading sysctl on master Node
+  command: sysctl --system
+
+- name: Workaround for running kube-api server on ubuntu_21.x and later versions
+  shell:
+    cmd: |
+      containerd config default | tee /etc/containerd/config.toml
+      sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
+      service containerd restart
+      service kubelet restart
