--- a/roles/k8s_slave_tinc/tasks/main.yml
+++ b/roles/k8s_slave_tinc/tasks/main.yml
@@ -1,6 +1,51 @@
 ---
 # tasks file for k8s_slave
 
+- name: Install net-tools for network management
+  apt:
+    name: net-tools
+    state: present
+
+- name: Update apt-get repo and cache
+  apt: update_cache=yes force_apt_get=yes
+
+- name: "Installing Tinc"
+  apt: name={{item}} state=present
+  with_items:
+    - tinc
+
+- name: "Create a directory for tinc configurations"
+  shell: mkdir -p /etc/tinc/netname/hosts
+
+- name: "copy tinc.conf file"
+  template:
+    src: tinc.conf
+    dest: "/etc/tinc/netname/"
+
+- name: "Copy hosts config file"
+  template:
+    src: slave
+    dest: "/etc/tinc/netname/hosts/"
+
+- name: "create key pairs"
+  shell: tincd -n netname -K4096
+  responses:
+    'Please enter a file to save private RSA key to [/etc/tinc/netname/rsa_key.priv]: ': ''
+    'Please enter a file to save public RSA key to [/etc/tinc/netname/hosts/externalnyc]: ': ''
+
+- name: "copy tinc-up script"
+  template:
+    src: tinc-up
+    dest: "/etc/tinc/netname/"
+
+- name: "copy tinc-down script"
+  template:
+    src: tinc-down
+    dest: "/etc/tinc/netname/"
+
+- name: "Make the tinc scripts executable"
+  shell: chmod 755 /etc/tinc/netname/tinc-*
+
 # Adding kubernetes repo from base url using gpg keys
 - name: install APT Transport HTTPS
   apt:
