--- a/roles/k8s_vpn_tinc/tasks/main.yml
+++ b/roles/k8s_vpn_tinc/tasks/main.yml
@@ -2,3 +2,58 @@
 # tasks file for k8s_vpn
 
 # Installing ovpn
+
+- name: Install net-tools for network management
+  apt:
+    name: net-tools
+    state: present
+
+- name: Update apt-get repo and cache
+  apt: update_cache=yes force_apt_get=yes
+
+- name: "Installing Tinc"
+  apt: name={{item}} state=present
+  with_items:
+    - tinc
+
+- name: "Create a directory for tinc configurations"
+  shell: mkdir -p /etc/tinc/netname/hosts
+
+- name: "copy tinc.conf file"
+  template:
+    src: tinc.conf
+    dest: "/etc/tinc/netname/"
+
+- name: "Copy hosts config file"
+  template:
+    src: externalnyc
+    dest: "/etc/tinc/netname/hosts/"
+
+- name: "Update host config file with vpn server Public IP"
+  shell: curl ifconfig.me
+  register: vpn_public_ip
+
+- name: Replace public IP in the config file
+  ansible.builtin.replace:
+    path: /etc/tinc/netname/hosts/externalnyc
+    regexp: 'externalnyc_public_IP'
+    replace: "{{ vpn_public_ip.stdout }}"
+
+- name: "create key pairs"
+  shell: tincd -n netname -K4096
+  responses:
+    'Please enter a file to save private RSA key to [/etc/tinc/netname/rsa_key.priv]: ': ''
+    'Please enter a file to save public RSA key to [/etc/tinc/netname/hosts/externalnyc]: ': ''
+
+- name: "Copy tinc-up file"
+  template:
+    src: tinc-up
+    dest: "/etc/tinc/netname/"
+
+- name: "Copy tinc-down file"
+  template:
+    src: tinc-down
+    dest: "/etc/tinc/netname/"
+
+- name: "Make the tinc scripts executable"
+  shell: chmod 755 /etc/tinc/netname/tinc-*
